# agent-semantic-languages-protocol

./: .gitignore  .gitmodules  Cargo.toml  Justfile  LICENSE  README.md  SKILL.md  asp.toml  devenv.nix
.codex/: config.toml
crates/agent-semantic-protocol/: Cargo.toml
crates/agent-semantic-protocol/src/command/: dispatch.rs  document_provider.rs  graph.rs  healthcheck.rs  hook_runtime.rs  hook_runtime_codex_plugin.rs  hook_runtime_skill.rs  hook_runtime_stdin.rs  mod.rs  protocol_binary.rs  provider.rs  provider_process.rs  provider_roots.rs  query_direct_read.rs  root_language_facade.rs  search_config.rs  search_failure_render.rs  search_pipe.rs  search_pipe_candidates.rs  search_pipe_dependency_facts.rs  search_pipe_graph_turbo.rs  search_pipe_plan.rs  search_pipe_render.rs  search_pipe_semantic_facts.rs  search_suggest.rs
crates/agent-semantic-protocol/src/graph/: actions.rs  aliases.rs  pipeline.rs
crates/agent-semantic-protocol/tests/: unit_test.rs
crates/agent-semantic-protocol/tests/unit/: client_hook_claude_smoke.rs  client_hook_config.rs  document_provider.rs  graph_render.rs  hook_command.rs
crates/agent-semantic-protocol/tests/unit/provider_command/: errors.rs  support.rs
crates/agent-semantic-protocol/tests/unit/provider_command/facade/: client_commands.rs  document.rs  language.rs  mod.rs  provider_invocation.rs  root_language.rs  roots.rs
crates/agent-semantic-runtime/: Cargo.toml  build.rs
crates/agent-semantic-runtime/src/: lib.rs  state.rs
crates/agent-semantic-runtime/tests/unit/: state.rs
rfcs/: agent-compact-graph-feature.org  (+9 more)
(+236 files in other folders)
