[package]
name = "agent-semantic-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-semantic-client = { path = "../agent-semantic-client" }
agent-semantic-config = { path = "../agent-semantic-config" }
agent-semantic-hook = { path = "../agent-semantic-hook" }
agent-semantic-provider-transport = { path = "../agent-semantic-provider-transport" }
agent-semantic-runtime = { path = "../agent-semantic-runtime" }
orgize = { path = "../../languages/orgize", features = ["md"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { workspace = true }

[[bin]]
name = "asp"
path = "src/main.rs"

[build-dependencies]
rust-lang-project-harness = { workspace = true }

[dev-dependencies]
rust-lang-project-harness = { workspace = true }
toml = "0.9"
